# PythonScaffolding

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  Project Structure.md  README.md  docker-compose.yml  gunicorn.py  make.bat  manage.py  pyproject.toml  uv.toml  wsgi.py
app/: __init__.py  database.py
app/api/v1/: __init__.py
app/api/v1/endpoints/: auth.py
app/api/v1/schemas/: auth.py  user.py
app/core/: extensions.py  security.py
app/models/: base.py  token.py  user.py
app/services/: auth_service.py  user_service.py
app/utils/: helpers.py
docs/: commands.md  pre-commit.md  project-structure.md  uv-guide.md
requirements/: base.txt  dev.txt  prod.txt
src/: __init__.py  app.py
src/api/: __init__.py  user.py  user_controller.py
src/api/v1/: __init__.py  hello.py
src/core/: config.py  database.py  error_handlers.py  exceptions.py  logging.py  response.py
src/models/: __init__.py  user.py  user_model.py
src/services/: __init__.py  user_service.py
tests/: conftest.py
tests/unit/: test_users.py
