[project]
name = "flask-api-scaffold"
version = "1.0.0"
description = "A modern Flask WebAPI scaffold"
authors = [{name = "Developer", email = "developer@example.com"}]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "Flask>=2.3.3",
    "pydantic>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.9.1",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.5.1",
    "pre-commit>=4.5.1",
]
prod = [
    "gunicorn>=21.2.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py313']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
