[project]
name = "fastapi-api-scaffold"
version = "1.0.0"
description = "A modern FastAPI WebAPI scaffold"
authors = [{name = "Developer", email = "developer@example.com"}]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.109.0",
    "pydantic>=2.3.0",
    "uvicorn[standard]>=0.27.0",
]

[project.optional-dependencies]
local = [
    "ruff>=0.8.0",
    "mypy>=1.5.1",
    "pre-commit>=4.5.1",
]
cloud = [
    "gunicorn>=21.2.0",
    "uvicorn[standard]>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
